feat(api,docs): 添加活动详情
